...
<!--        android:textSize="40dp"-->
<!--        android:textColor="#FF0000">-->
<!--    </TextView>-->


    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:text="Login"
        android:textSize="40sp"
        android:textColor="#ffffff">
    </Button>

    <Button
        android:id="@+id/main_signup_btn"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:text="Signup"
        android:textSize="40sp"
        android:textColor="#ffffff">
...
