<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.frontend.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:textSize="30dp"
        android:textColor="#000000"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username...">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password...">
        </EditText>

    </LinearLayout>

    <!-- Forgot Password Button -->
    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textSize="18dp"
        android:textColor="#1E90FF"
        android:layout_gravity="center"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
