...
            android:layout_gravity="center_vertical"
            android:paddingEnd="8dp" />


        <!-- Advanced Search Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/advanced_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Advanced Search"
            android:textSize="14sp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:cornerRadius="16dp"
...
